# learningsql

./: .gitignore  LearningSQLExample.sql  README.md  ch03_queryprimer.ipynb  ch10_joins_revisited.ipynb  ch11_conditional_logic.ipynb  ch3_queryprimer.ipynb  ch4_filtering.ipynb  ch5_querying_multiple_tables.ipynb  ch6_working_with_sets.ipynb  ch7_data_generation_conversion_and_manipulation.ipynb  ch8_grouping_and_aggregates.ipynb  ch9_subqueries.ipynb  pyproject.toml  relationships_testing.ipynb  utils.py
model/: __init__.py  account.py  base.py  branch.py  business.py  customer.py  department.py  employee.py  individual.py  officer.py  product.py  producttype.py  transaction.py
